Add event listener for register button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="./favicon.png" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memento Login</title>
     <link rel="stylesheet" type="text/css" href="src/css/index.css" />
   </head>
@@ -13,7 +13,7 @@
         <img src="src/assets/logo-black.png" alt="Memento Logo" />
       </div>
       <div class="form-container">
-        <h2>Login</h2>
+        <h1>Login</h1>
         <form id="login-form">
           <div class="form-group">
             <label for="username">Username</label>
@@ -37,7 +37,7 @@
     <footer>
       <div class="footer-container">
         <div class="copyright">Copyright © 2024 Memento</div>
-        <div class="footer-links"">
+        <div class="footer-links">
           <a href="#">About</a>
           <a href="#">Terms & Conditions</a>
           <a href="#">Privacy Policy</a>
