--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
           </div>
-          <button id="login-button" type="submit">Login</button>
+          <button id="login-button" type="submit">Log in</button>
         </form>
         <button id="register-button" type="submit">Register</button>
       </div>
@@ -45,6 +45,6 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="src/js/script.js"></script>
+    <script type="text/javascript" src="src/js/index.js"></script>
   </body>
 </html>
