--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="form-container">
         <img id="logo" src="../assets/logo-black.png" alt="Memento Logo" />
-        <form id="login-form">
+        <form id="signup-form">
           <div class="form-group">
             <label for="email">Email</label>
             <input
@@ -46,7 +46,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required />
           </div>
-          <button id="sign-up-button" type="submit">Sign up</button>
+          <button id="signup-button" type="submit">Sign up</button>
         </form>
       </div>
     </div>
