--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -8,20 +8,39 @@
     <link rel="stylesheet" type="text/css" href="../css/feed.css" />
   </head>
   <body>
-    <div class="container">
-      <p>Hello Feed</p>
-    </div>
-    <footer>
-      <div class="footer-container">
-        <div class="copyright">Copyright © 2024 Memento</div>
-        <div class="footer-links">
-          <a href="#">About</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Contact</a>
+    <div class="sidebar">
+      <div class="top-sidebar">
+        <div class="logo-container">
+          <img id="logo" src="../assets/logo-white.png" alt="Memento Logo" />
         </div>
+        <nav>
+          <ul>
+            <li><a href="../pages/feed.html" class="active">Home</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Direct Messages</a></li>
+            <li><a href="#">Notifications</a></li>
+            <li><a href="#">Create</a></li>
+            <li><a href="#">Profile</a></li>
+          </ul>
+        </nav>
       </div>
-    </footer>
+      <div class="bottom-sidebar">
+        <div class="bottom-links">
+          <ul>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Log Out</a></li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <div class="copyright">© 2024 Memento</div>
+          <div class="footer-links">
+            <a href="#">About</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Contact</a>
+          </div>
+      </div>
+    </div>
     <script type="text/javascript" src="../js/feed.js"></script>
   </body>
 </html>
