--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="copyright">Copyright © 2024 Memento</div>
         <div class="footer-links">
           <a href="#">About</a>
-          <a href="#">Terms & Conditions</a>
-          <a href="#">Privacy Policy</a>
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
           <a href="#">Contact</a>
         </div>
       </div>
