--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="footer-container">
         <div class="copyright">Copyright © 2024 Memento</div>
         <div class="footer-links">
-          <a href="#">About</a>
+          <a href="src/pages/about.html">About</a>
           <a href="#">Terms</a>
           <a href="#">Privacy</a>
           <a href="#">Contact</a>
