--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./favicon.png" />
+    <link rel="shortcut icon" href="../../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memento</title>
     <link rel="stylesheet" type="text/css" href="../css/feed.css" />
