Update About page with description, mission, and team

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -16,29 +16,42 @@
         <h1>About Memento</h1>
         <div class="description">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Consequuntur ratione unde totam placeat perspiciatis impedit, quod
-            nostrum sequi excepturi hic sint doloribus? Labore reiciendis nemo
-            voluptatibus corrupti, aliquam sunt modi.
+            Memento is an engaging social media platform focused on sharing
+            precious moments through photos and text statuses. Users are the
+            authors of their digital life stories as they share their
+            experiences and memories with the world.
           </p>
         </div>
       </section>
       <section class="mission">
         <h2>Our Mission</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis magni
-          dolore voluptatibus iusto illo maxime nobis minus voluptatum aut
-          temporibus suscipit officia, mollitia reprehenderit facilis doloremque
-          ut commodi. Iusto, totam?
+          At Memento, our mission is to foster a community built on authenticity
+          and connection by empowering individuals to capture and share
+          treasured moments of their lives.
         </p>
       </section>
       <section class="team">
         <h2>Meet the Team</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, ad
-          quasi. Laboriosam iusto aperiam exercitationem, quod in accusamus
-          dolorum amet id iste quae eos excepturi ab facere vel delectus ullam.
-        </p>
+        <div class="team-member">
+          <h3>Caroline Nguyen</h3>
+          <img
+            class="avatar"
+            src="../assets/caroline_avatar.png"
+            alt="Animated avatar of Caroline"
+          />
+          <em>Developer</em>
+        </div>
+        <div class="team-member">
+          <h3>Snowie</h3>
+          <img
+            class="avatar"
+            id="snowie"
+            src="../assets/snowie_avatar.png"
+            alt="Animated avatar of Snowie, a white Pomeranian"
+          />
+          <em>CEO, COO, CFO, CTO</em>
+        </div>
       </section>
     </div>
     <footer>
