Add landing page link to Memento logo

--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <div class="form-container">
-        <img id="logo" src="../assets/logo-black.png" alt="Memento Logo" />
+        <a href="../../index.html">
+          <img id="logo" src="../assets/logo-black.png" alt="Memento Logo" />
+        </a>
         <form id="signup-form">
           <div class="form-group">
             <label for="email">Email</label>
