--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <div class="logo-container">
-        <img src="src/assets/logo-black.png" alt="Memento Logo" />
+        <a href="index.html">
+          <img src="src/assets/logo-black.png" alt="Memento Logo" />
+        </a>
       </div>
       <div class="form-container">
         <h1>Login</h1>
