Create terms, privacy, and contact pages

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="copyright">Copyright © 2024 Memento</div>
         <div class="footer-links">
           <a href="src/pages/about.html">About</a>
-          <a href="#">Terms</a>
-          <a href="#">Privacy</a>
-          <a href="#">Contact</a>
+          <a href="src/pages/terms.html">Terms</a>
+          <a href="src/pages/privacy.html">Privacy</a>
+          <a href="src/pages/contact.html">Contact</a>
         </div>
       </div>
     </footer>
