--- a/src/pages/terms.html
+++ b/src/pages/terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="../../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Memento</title>
+    <title>Memento Terms and Conditions</title>
     <link rel="stylesheet" type="text/css" href="../css/footer.css" />
   </head>
   <body>
@@ -58,8 +58,8 @@
       <div class="footer-container">
         <div class="copyright">Copyright © 2024 Memento</div>
         <div class="footer-links">
-          <a href="about.html" class="active">About</a>
-          <a href="terms.html">Terms</a>
+          <a href="about.html">About</a>
+          <a href="terms.html" class="active">Terms</a>
           <a href="privacy.html">Privacy</a>
           <a href="contact.html">Contact</a>
         </div>
