Configure sidebar links

--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -15,11 +15,11 @@
         </div>
         <nav>
           <ul>
-            <li><a href="feed.html" class="active">Home</a></li>
+            <li><a href="feed.html">Home</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="messages.html">Direct Messages</a></li>
             <li><a href="notifications.html">Notifications</a></li>
-            <li><a href="create.html">Create</a></li>
+            <li><a href="create.html" class="active">Create</a></li>
             <li><a href="profile.html">Profile</a></li>
           </ul>
         </nav>
