--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -15,12 +15,12 @@
         </div>
         <nav>
           <ul>
-            <li><a href="feed.html" class="active">Home</a></li>
+            <li><a href="feed.html">Home</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="messages.html">Direct Messages</a></li>
             <li><a href="notifications.html">Notifications</a></li>
             <li><a href="create.html">Create</a></li>
-            <li><a href="profile.html">Profile</a></li>
+            <li><a href="profile.html" class="active">Profile</a></li>
           </ul>
         </nav>
       </div>
