--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -15,7 +15,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="feed.html" class="active">Home</a></li>
+            <li><a href="feed.html">Home</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="messages.html">Direct Messages</a></li>
             <li><a href="notifications.html">Notifications</a></li>
@@ -27,7 +27,7 @@
       <div class="bottom-sidebar">
         <div class="bottom-links">
           <ul>
-            <li><a href="settings.html">Settings</a></li>
+            <li><a href="settings.html" class="active">Settings</a></li>
             <li><a href="../../index.html">Log Out</a></li>
           </ul>
         </div>
