--- a/src/pages/messages.html
+++ b/src/pages/messages.html
@@ -15,9 +15,9 @@
         </div>
         <nav>
           <ul>
-            <li><a href="feed.html" class="active">Home</a></li>
+            <li><a href="feed.html">Home</a></li>
             <li><a href="#">Search</a></li>
-            <li><a href="messages.html">Direct Messages</a></li>
+            <li><a href="messages.html" class="active">Direct Messages</a></li>
             <li><a href="notifications.html">Notifications</a></li>
             <li><a href="create.html">Create</a></li>
             <li><a href="profile.html">Profile</a></li>
