--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -15,10 +15,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="feed.html" class="active">Home</a></li>
+            <li><a href="feed.html">Home</a></li>
             <li><a href="#">Search</a></li>
             <li><a href="messages.html">Direct Messages</a></li>
-            <li><a href="notifications.html">Notifications</a></li>
+            <li><a href="notifications.html" class="active">Notifications</a></li>
             <li><a href="create.html">Create</a></li>
             <li><a href="profile.html">Profile</a></li>
           </ul>
