--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <a href="../../index.html">
-        <img id="logo" src="../assets/logo-black.png" alt="Memento Logo" />
-      </a>
+      <div class="heading">
+        <button id="back-button">Back</button>
+        <a href="../../index.html">
+          <img id="logo" src="../assets/logo-black.png" alt="Memento Logo" />
+        </a>
+      </div>
       <section class="about-us">
         <h1>About Memento</h1>
         <div class="description">
