--- a/src/pages/terms.html
+++ b/src/pages/terms.html
@@ -16,7 +16,7 @@
         </a>
       </div>
       <section class="about-us">
-        <h1>About Memento</h1>
+        <h1>Memento Terms and Conditions</h1>
         <div class="description">
           <p>
             Memento is an engaging social media platform focused on sharing
